document endpoints with swagger
